# IDE_MUT_Application_C_CPP_1

./: .gitattributes  CMakeLists.txt  CMakePresets.json  ReadMe.txt  vcpkg.json
mut/: CMakeLists.txt  mut.cpp
src/: CMakeLists.txt  dpi_manager.h  gui_layer.cpp  gui_layer.h  main.cpp  mut.cpp  platform_window.h
src/editor/: clang_indexer.cpp  clang_indexer.h  editor_window.cpp  editor_window.h  syntax_highlighter.cpp  syntax_highlighter.h  text_editor.cpp  text_editor.h
src/gui/: TextEditor.cpp  TextEditor.h  console_panel.h  editor_panel.h  filemanager_panel.h  gui_layer.cpp  inspector_panel.h  symbols_panel.h  top_bar.h
src/platform/: dpi_manager.cpp  pickfolder.h  platform_window.cpp
